Seperated implementation/decleration of AMQP part.

--- a/TODO
+++ b/TODO
@@ -2,4 +2,5 @@ TODO List:
 
 1- Convert SBS string to bytstream.
 2- Publish ADSB message as ByteStream.
-3- Run TCP and AMQP publish on different threads.
+3- Implement a handler to 30003 port connection.
+4- Run TCP and AMQP publish on different threads.
